--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </figure>
     </div>
   </section>
-  <section id="wekly">
+  <section id="weekly">
     <header class="grid grid-flow-col">
       <h3>Maias lidas da semana</h3>
       <a href="#" class="grid grid-flow-col">
