--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
   </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -231,7 +231,7 @@
             </div>
             <div>
               <span class="content-tag">software</span>
-              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...              
+              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas...             
               </h3>
             </div>            
           </article>
@@ -242,7 +242,7 @@
             </div>
             <div>
               <span class="content-tag">realidade virtual</span>
-              <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...    
+              <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial... 
               </h3>
             </div>            
           </article>
@@ -253,7 +253,7 @@
             </div>
             <div>
               <span class="content-tag">criptomoedas</span>
-              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando        minimizar o i...
+              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...
               </h3>
             </div>            
           </article>
@@ -264,7 +264,7 @@
             </div>
             <div>
               <span class="content-tag">drones</span>
-              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...        
+              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...      
               </h3>
             </div>            
           </article>
@@ -275,13 +275,13 @@
             </div>
             <div>
               <span class="content-tag">impressão 3d</span>
-              <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...          
+              <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina...        
               </h3>
             </div>            
           </article>
         </div>      
       </section>
-    </div>
+    </aside>
   </main>
 </body>
 </html>
